week 14 second api, added more styling and search feature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,31 @@
     <title>Document</title>
 </head>
 <body>
+<div class="top-page-container">
+    <div class="top-page">
+    <h1>Chicago Art Institute Gallery</h1>
+    <h2>made by Alayna Taylor (class Kepler)</h2>
+
+    <p class="info-bio">I live very close to the city of Chicago in Illinois, so I've been here numerous of times. <br> The largest sky scraper or building in the city is Willis Tower my first tech work place.
+    <br> I love seeing Navy Pier and Lake Michigan.</p>
+</div>
+</div>
     
+    <div class="gallery-container">
+        <div class="gallery-title-container">
+            <h2 class="gallery-title">Gallery</h2>
+        </div>
+
+        <input type="text" id="search-input" placeholder="Search for art...">
+        <button id="search-btn">Search</button>
+        
+        <div class="gallery-wrapper"></div>
+
+
+        <div class="gallery-wrapper">
+
+        </div>
+    </div>
     <script src="/index.js"></script>
 </body>
 </html>
