--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
 <div class="top-page-container">
     <div class="top-page">
-    <h1>Chicago Art Institute Gallery</h1>
-    <h2>made by Alayna Taylor (class Kepler)</h2>
+    <h1>Art Institute of Chicago Gallery</h1>
+    <h2>by Alayna</h2>
 
-    <p class="info-bio">I live very close to the city of Chicago in Illinois, so I've been here numerous of times. <br> The largest sky scraper or building in the city is Willis Tower my first tech work place.
-    <br> I love seeing Navy Pier and Lake Michigan.</p>
+    <p class="info-bio">I live very close to Chicago, so I visit here often. <br> My first job in tech was at Willis Tower, the tallest skyscraper in the city.
+    <br> I love coming to Navy Pier and seeing Lake Michigan. <br>Anyways, thanks for visiting!</p>
 </div>
 </div>
     
