added pagination so users can page through the art, fixed ui, and is now mobile friendly

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <br> I love coming to Navy Pier and seeing Lake Michigan. <br>Anyways, thanks for visiting!</p>
 </div>
 </div>
+
+    <div class="bottom-container"></div>
     
     <div class="gallery-container">
         <div class="gallery-title-container">
@@ -25,13 +27,14 @@
 
         <input type="text" id="search-input" placeholder="Search for art...">
         <button id="search-btn">Search</button>
-        
-        <div class="gallery-wrapper"></div>
-
 
         <div class="gallery-wrapper">
 
         </div>
+        <div class="pagination">
+            <button id="prev-btn">Previous</button>
+            <span id="page-indicator">Page 1</span>
+            <button id="next-btn">Next</button>    </div>
     </div>
     <script src="/index.js"></script>
 </body>
