--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
     <h1>Art Institute of Chicago Gallery</h1>
     <h2>by Alayna</h2>
 
-    <p class="info-bio">I live very close to Chicago, so I visit here often. <br> My first job in tech was at Willis Tower, the tallest skyscraper in the city.
-    <br> I love coming to Navy Pier and seeing Lake Michigan. <br>Anyways, thanks for visiting!</p>
+    <p class="info-bio">I live very close to Chicago, so I visit here often. <br> My first job in tech was at Willis Tower, the tallest skyscraper in the city. (You can see the building from the background image.)
+    <br> I love coming to Navy Pier and seeing Lake Michigan. <br>Anyway, enjoy and thanks for visiting!</p>
 </div>
 </div>
 
-    <div class="bottom-container"></div>
-    
     <div class="gallery-container">
         <div class="gallery-title-container">
             <h2 class="gallery-title">Gallery</h2>
