--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Art Institute of Chicago Gallery</h1>
     <h2>by Alayna</h2>
 
-    <p class="info-bio">I live very close to Chicago, so I visit here often. <br> My first job in tech was at Willis Tower, the tallest skyscraper in the city. (You can see the building from the background image.)
+    <p class="info-bio">I live very close to Chicago, so I visit here often. <br> My first job in tech was in Willis Tower, the tallest skyscraper in the city. (You can see the building from the background image.)
     <br> I love coming to Navy Pier and seeing Lake Michigan. <br>Anyway, enjoy and thanks for visiting!</p>
 </div>
 </div>
